all applications for admin

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -84,6 +84,10 @@
               <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
               Add Holidays
             </a>
+            <a class="nav-link" href="/admin/getAll" id="applications" >
+              <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+              Get All Applications
+            </a>
 
             <div class="sb-sidenav-menu-heading">Logout</div>
             <a class="nav-link" href="/logout">
@@ -253,10 +257,6 @@
 
             </div>
           </div>
-
-          
-
-
         </div>
 
 
