--- a/views/allAppl.ejs
+++ b/views/allAppl.ejs
@@ -26,6 +26,7 @@
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
 
+  <!-- new new -->
 
   <!-- CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
@@ -35,61 +36,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
 
+
   <style>
-    body {
-      padding: 35px;
-      font-size: 15px;
-
-    }
-
-    input[type=text],
-    select {
-      width: 100%;
-      padding: 12px 20px;
-      margin: 8px 0;
-      display: inline-block;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    input[type=submit] {
-      width: 100%;
-      background-color: #4CAF50;
-      color: white;
-      padding: 14px 20px;
-      margin: 8px 0;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    input[type=submit]:hover {
-      background-color: #45a049;
-    }
-
-    form div {
-      border-radius: 5px;
-      background-color: #f2f2f2;
-      padding: 20px;
-    }
-
-    .select2-container .select2-selection--single {
-      height: 47px !important;
-      /* Adjust the value as needed */
-      border-radius: 5px !important;
-      line-height: 38px !important;
-
-      display: flex !important;
-      flex-direction: column !important;
-      justify-content: center !important;
-      padding: auto 0 !important;
-
-    }
-
-    /* Adjust the position of the select field to align with other input fields */
-    .select2-container--default .select2-selection--single .select2-selection__arrow {
-      height: 38px !important;
+    .content {
+      display: none;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -97,26 +48,28 @@
 <body class="sb-nav-fixed">
   <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="/admin">Admin Page</a>
+    <a class="navbar-brand ps-3" href="/student">Student Login Page</a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
         class="fas fa-bars"></i></button>
   </nav>
   <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
-      <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+      <nav class="sb-sidenav acco rdion sb-sidenav-dark" id="sidenavAccordion">
         <div class="sb-sidenav-menu">
           <div class="nav">
+            <!-- <div class="sb-sidenav-menu-heading">Core</div> -->
             <div class="sb-sidenav-menu-heading">Core</div>
-            <a class="nav-link" id="viewAppl" href="/admin" onclick="showContent('viewAppl');">
-              <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-              Back to Dashboard
+            <a class="nav-link" id = "viewAppl" href="/admin" onclick="showContent('viewAppl');">
+                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                Back to Dashboard
             </a>
             <div class="sb-sidenav-menu-heading">Interface</div>
-            <a class="nav-link" href="/admin/getAll" id="applications">
+            <a class="nav-link" href="/admin/getAll" id="applications" >
               <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
               Get All Applications
             </a>
+
 
             <div class="sb-sidenav-menu-heading">Logout</div>
             <a class="nav-link" href="/logout">
@@ -134,84 +87,65 @@
     <div id="layoutSidenav_content">
       <main>
         <div class="container-fluid px-4">
-          <h1 class="mt-4">Leave Applications</h1>
+          <h1 class="mt-4">Leave Applications </h1>
           <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Admin</li>
           </ol>
 
-          <div class="card mb-4 content" >
+          <div class="card mb-4 content" id="pastAppl-content" style="display:block;">
             <div class="card-header">
               <i class="fas fa-table me-2"></i>
-              All Leave Applications till date
+             Applications Till Now
             </div>
             <div class="card-body">
               <table id="datatablesSimple">
                 <thead>
                   <tr>
                     <th>Roll No</th>
-                    <th>Name Of Scholar</th>
-                    <!-- <th>Department</th>
-                                <th>Program</th> -->
-                    <th>Type of Leave</th>
-                    <!-- <th>Overflow</th> -->
-                    <th>Final Approval Status</th>
+                    <th>Name</th>
+                    <th>Type of leave</th>
+                    <th>Final Status</th>
                     <th>From Date</th>
                     <th>To Date</th>
-                    <th>Alternate TA </th>
-
+                    <th>Alternate TA</th>
                   </tr>
                 </thead>
                 <tfoot>
                   <tr>
                     <th>Roll No</th>
-                    <th>Name Of Scholar</th>
-                    <!-- <th>Department</th>
-                                <th>Program</th> -->
-                    <th>Type of Leave</th>
-                    <!-- <th>Overflow</th> -->
-                    <th>Final Approval Status</th>
+                    <th>Name</th>
+                    <th>Type of leave</th>
+                    <th>Final Status</th>
                     <th>From Date</th>
                     <th>To Date</th>
-                    <th>Alternate TA </th>
+                    <th>Alternate TA</th>
                   </tr>
                 </tfoot>
                 <tbody>
-                  <% i=0; if(allAppl.length>0){
-                    allAppl.forEach((record)=>{
-                    %>
-                    <tr>
-                      <td>
-                        100
-                      </td>
-                      <td>
-                        100
-                      </td>
-                      <td>
-                        100
-                      </td>
-                      <td> 10 </td>
-                      <td>
-                        100
-                      </td>
-                      <td>
-                        100
-                      </td>
-                      <td>
-                        100
-                      </td>
-                      <td>
-                        100
-                      </td>
 
-                    </tr>
-                    <% i++; });} %>
+                  <% allAppl.forEach( ( record ) => {%>
+
+                  <tr>
+                    <td> <%- record.rollno %> </td>
+                    <td> <%- record.nameofscholar %> </td>
+                    <td> <%- record.typeofleave %> </td>
+                    <td> <%- record.admin_approval %> </td>
+                    <td> <%- (record.fromdate).toISOString().slice(0,10) %> </td>
+                    <td> <%- (record.todate).toISOString().slice(0,10) %> </td>
+                    <td> <%- record.alternatestudentname %> </td>
+
+                  </tr>
+
+                  <% } ) %>
+
 
                 </tbody>
               </table>
 
             </div>
           </div>
-        </div>
+
+
 
 
       </main>
@@ -219,55 +153,215 @@
         <div class="container-fluid px-4">
           <div class="d-flex align-items-center justify-content-between small">
             <div class="text-muted">Copyright &copy; __</div>
-            <!-- <div>
-                              <a href="#">Privacy Policy</a>
-                              &middot;
-                              <a href="#">Terms &amp; Conditions</a>
-                          </div>  -->
-          </div>
         </div>
       </footer>
     </div>
   </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<!-- <script src="js/scripts.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<!-- <script src="assets/demo/chart-area-demo.js"></script> -->
-<!-- <script src="assets/demo/chart-bar-demo.js"></script> -->
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-<!-- <script src="js/datatables-simple-demo.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+  <!-- <script src="js/scripts.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+  <!-- <script src="assets/demo/chart-area-demo.js"></script> -->
+  <!-- <script src="assets/demo/chart-bar-demo.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+    crossorigin="anonymous"></script>
+  <!-- <script src="js/datatables-simple-demo.js"></script> -->
 
 
 
-  window.addEventListener('DOMContentLoaded', event => {
 
-    // Toggle the side navigation
-    const sidebarToggle = document.body.querySelector('#sidebarToggle');
-    if (sidebarToggle) {
-      // Uncomment Below to persist sidebar toggle between refreshes
-      // if (localStorage.getItem('sb|sidebar-toggle') === 'true') {
-      //     document.body.classList.toggle('sb-sidenav-toggled');
-      // }
-      sidebarToggle.addEventListener('click', event => {
-        event.preventDefault();
-        document.body.classList.toggle('sb-sidenav-toggled');
-        localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
-      });
+
+
+
+
+
+  <script>
+    var lastClick = 'button1';
+    function showContent(buttonId) {
+      const selectedContenthiv = document.getElementById(buttonId + '-content');
+      var content = selectedContenthiv.style.display;
+
+      var contenthivs = document.getElementsByClassName('content');
+      for (var i = 0; i < contenthivs.length; i++) {
+        contenthivs[i].style.display = 'none';
+      }
+
+      if (lastClick == buttonId && content == 'block') {
+        selectedContenthiv.style.display = 'none';
+      }
+      else
+        selectedContenthiv.style.display = 'block';
+      lastClick = buttonId;
     }
 
-  });
+    function logout() {
+      window.location.href = '/logout';
+    }
 
-  window.addEventListener('DOMContentLoaded', event => {
-    // Simple-DataTables
-    // https://github.com/fiduswriter/Simple-DataTables/wiki
 
-    const datatablesSimple = document.getElementById('datatablesSimple');
-    if (datatablesSimple) {
+    function added() {
+      document.getElementById("onAdd").innerHTML = "Added Successfully!! ";
+      setTimeout(() => {
+        document.getElementById("onAdd").innerHTML = '';
+
+      }, 2000);
+    }
+
+    window.addEventListener('DOMContentLoaded', event => {
+
+      // Toggle the side navigation
+      const sidebarToggle = document.body.querySelector('#sidebarToggle');
+      if (sidebarToggle) {
+        // Uncomment Below to persist sidebar toggle between refreshes
+        // if (localStorage.getItem('sb|sidebar-toggle') === 'true') {
+        //     document.body.classList.toggle('sb-sidenav-toggled');
+        // }
+        sidebarToggle.addEventListener('click', event => {
+          event.preventDefault();
+          document.body.classList.toggle('sb-sidenav-toggled');
+          localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
+        });
+      }
+
+    });
+
+    // Call the dataTables jQuery plugin
+    // $(document).ready(function() {
+    //   $('#dataTable').DataTable();
+    // });
+
+    window.addEventListener('DOMContentLoaded', event => {
+      // Simple-DataTables
+      // https://github.com/fiduswriter/Simple-DataTables/wiki
+
+      const datatablesSimple = document.getElementById('datatablesSimple');
+      if (datatablesSimple) {
         new simpleDatatables.DataTable(datatablesSimple);
-    }
-});
+      }
+    });
 
-</script>
+
+
+
+
+
+    function countWeekendDays(startDate, endDate) {
+      let count = 0;
+      let currentDate = new Date(startDate);
+
+      while (currentDate <= endDate) {
+        const dayOfWeek = currentDate.getDay();
+        if (dayOfWeek === 0 || dayOfWeek === 6) {
+          count++;
+        }
+        currentDate.setDate(currentDate.getDate() + 1);
+      }
+
+      return count;
+    }
+
+
+    async function calculateDays() {
+      // Get the start and end dates
+      const startDate = new Date(document.getElementById("from").value);
+      startDate.setHours(0, 0, 0, 0);
+      const endDate = new Date(document.getElementById("to").value);
+      endDate.setHours(0, 0, 0, 0);
+
+      if ((!endDate) || (!startDate)) {
+        return;
+      }
+
+      if (startDate && endDate) {
+
+        if (endDate < startDate) {
+          alert("check start and end dates")
+          document.getElementById("from").value = "";
+          document.getElementById("to").value = "";
+          return;
+        }
+
+      }
+
+      var counter = 0
+      var lst = []
+
+
+      lst.forEach((y) => {
+
+        // console.log(startDate)
+        // console.log(y)
+        // console.log(endDate)
+
+        if ((startDate <= y) && (y <= endDate)) {
+          counter = counter + 1;
+        }
+      })
+
+      // dates.forEach( (r) =>{
+      //     console.log(r.date)
+      // } )
+
+      console.log(counter)
+
+      // Calculate the number of days between the dates
+      const numDays = Math.ceil((endDate - startDate) / (1000 * 60 * 60 * 24));
+
+      // Set the value of the "Number of Days" input field
+      const numdays = numDays - countWeekendDays(startDate, endDate) + 1 - counter;
+
+      const allow = document.getElementById('noOfLeavesLeft').value
+      let flag = false
+      if (numdays >= allow) {
+        alert(`You are applying for more days than allocated days`);
+        document.getElementById("overflowDays").value = (numdays - allow)
+        document.getElementById("overflowDays").style = 'color:red'
+        flag = true
+      }
+      if (!flag) {
+        document.getElementById("overflowDays").value = 0
+        document.getElementById("overflowDays").style = 'color:black'
+      }
+      document.getElementById("noOfDays").value = numdays;
+    }
+
+    function handleleavetype() {
+
+      const val = document.getElementById("typeOfLeave").value;
+      var inputbox = document.getElementById("typeOfLeaveReason");
+      var text = "None"
+      if (val == "1") {
+        text = `Leave with stipend not exceeding 30 days for each completed year of tenure may be allowed. Sanction of leave without stipend may be considered under special circumstances. If the Fellow is away from the Institute for more than a period of 7 days, then all the holidays that come within that period will be counted as leave.`
+      }
+      else if (val == "2") {
+        text = `The Fellow should take permission for visits abroad for attending conferences/seminars etc. The absence for such foreign visits will be treated as on duty.`
+      }
+      else if (val == "3") {
+        text = `Women Fellows with less than two surviving children are entitled to full stipend plus HRA, during the period of absence up to 180 days on grounds of maternity once in the entire duration of PhD. The Fellowship amount for leave period will be paid after the fellow resumes duty and submits a medical certificate in support of actual confinement. It is expected that the Fellow will make up for the research work during the remaining tenure.`
+      }
+      else if (val == "4") {
+        text = `Second maternity leave applications from the women research scholars shall be considered as under “other valid reasons” for grant of leave. Accordingly, the second maternity leave, if granted, shall be without any fellowship. The total duration of the fellowship should be five years from the date of joining and any extension provided beyond five years shall be without fellowship.`
+      }
+      else if (val == "5") {
+        text = `Male Fellows of institute HTRA / CSIR are entitled for 15 days paternity leave during the confinement of his wife on submission of relevant documentary proof. The leave shall be taken at a single stretch, without a break and can be availed only once during the period of fellowship.`
+      }
+      else {
+        inputbox.style.display = "none"
+        return;
+      }
+
+      inputbox.style.display = "block"
+      inputbox.innerHTML = '<i>' + text + '</i>';
+    }
+
+
+
+  </script>
+
+
+
+
+
+</body>
 
 </html>
