--- a/views/login.ejs
+++ b/views/login.ejs
@@ -226,7 +226,7 @@ input[type=submit] {
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.3), inset 0 10px 10px rgba(255,255,255,0.1);
   color: #873C00;
   cursor: pointer;
-  font-size: 13px;
+  font-size: 1rem;
   font-weight: bold;
   height: 40px;
   padding: 5px 20px;
@@ -432,7 +432,7 @@ input[type="checkbox"]:checked ~ .checkbox {
         <div class="background"></div>
       </div>
       
-      <form id="accesspanel" action="login" method="post">
+      <form id="accesspanel" action="/auth/google" method="get">
         <h1 id="litheader">IIT Palakkad</h1>
         <div class="inset">
           <p>
