--- a/views/ChangeInstructor.ejs
+++ b/views/ChangeInstructor.ejs
@@ -172,7 +172,7 @@
                                 <form action="/admin/updateInstructor" method="post">
                                     <label for="rollNo" style="margin-bottom: 0.8%;margin-top: 0.8%;"  >TA Roll No</label>
                                     <!-- <input type="text" id="rollNo" name="RollNo" required placeholder="TA Roll No..">-->
-                                    <select name="rollNo" class="select2" style="background-color: white; height: 15%;"
+                                    <select name="RollNo" class="select2" style="background-color: white; height: 15%;"
                                         required>
                                         <option value="" selected disabled> select student rollno </option>
                                         <% data1.forEach(row=> { %>
@@ -184,7 +184,7 @@
                                     <label for="name"  style="margin-bottom: 0.8%;margin-top: 0.8%;"  >New Instructor Name</label>
                                     <!-- <input type="text" id="name" name="Instructor" required  placeholder="Instructor's Name.."> -->
 
-                                    <select name="name" class="select2" style="background-color: white; height: 15%;"
+                                    <select name="Instructor" class="select2" style="background-color: white; height: 15%;"
                                         required>
                                         <option value="" selected disabled> select faculty advisor </option>
                                         <% data.forEach(row=> { %>
