--- a/views/AddTA.ejs
+++ b/views/AddTA.ejs
@@ -196,7 +196,7 @@
 
                                         $(document).ready(function () {
                                             $('.select2').select2({
-                                                placeholder: "search for faculty",
+                                                placeholder: "select..",
                                                 allowClear: true,
                                                 width: "100%",
                                                 dropdownAutoWidth: true,
