added parser for date type (to only string)

--- a/views/allAppl.ejs
+++ b/views/allAppl.ejs
@@ -130,8 +130,8 @@
                     <td> <%- record.nameofscholar %> </td>
                     <td> <%- record.typeofleave %> </td>
                     <td> <%- record.admin_approval %> </td>
-                    <td> <%- (record.fromdate).toISOString().slice(0,10) %> </td>
-                    <td> <%- (record.todate).toISOString().slice(0,10) %> </td>
+                    <td> <%- record.fromdate%> </td>
+                    <td> <%- record.todate%> </td>
                     <td> <%- record.alternatestudentname %> </td>
 
                   </tr>
