--- a/views/pmapproval.ejs
+++ b/views/pmapproval.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Page</title>
+    <title>Project Mentor Page</title>
     <!-- <link rel = "stylesheet" href ="styles/asmin.css"></link> -->
     
     <!-- Latest compiled and minified CSS -->
@@ -226,7 +226,7 @@
         <hr>
         <label> Project Mentor's Approval: Please Choose: </label>
         <select name="status" id="approvalStatus"  readonly>
-            <option value="Pending" selected><%= data.pm_approval %></option>
+            <option value="Pending" selected> Pending </option>
             <option value="Approved" > Approve </option>
             <option value="Not Approved" > Reject </option>
 
