--- a/views/project_mentor.ejs
+++ b/views/project_mentor.ejs
@@ -116,7 +116,7 @@
                                       <td><%= record.mentor_approval%></td>                  
                                       <td >
                                       <div>
-                                    <form method = 'get' action = /faculty/<%= record.rollno%> >
+                                    <form method = 'get' action = /pm/<%= record.rollno%> >
                                       <input type="submit" value="Open Form" style="font-family: Arial, sans-serif; font-size: 16px;" >
                                     </form> 
                                     </div>
