added date check

--- a/views/approveForm.ejs
+++ b/views/approveForm.ejs
@@ -218,12 +218,12 @@
 
             <label for="from"> Start date </label>
             <input type="text" name="leavefromdate" id="from" readonly
-                value="<%= data.fromdate.toISOString().slice(0,10); %>">
+                value="<%= data.fromdate%>">
 
 
             <label for="from"> End date </label>
             <input type="text" name="leaveToDate" id="to" readonly
-                value="<%= data.todate.toISOString().slice(0,10); %>">
+                value="<%= data.todate%>">
 
             <br>
 
