--- a/views/pmapproval.ejs
+++ b/views/pmapproval.ejs
@@ -188,11 +188,11 @@
         <textarea name="leavePurpose" id="leavePurpose"  readonly><%= data.leavepurpose %></textarea>
  
         <label for="from"> Start date </label>
-        <input type="text" name="leavefromdate" id="from"  readonly value="<%= data.fromdate.toISOString().slice(0,10); %>">
+        <input type="text" name="leavefromdate" id="from"  readonly value="<%= data.fromdate%>">
 
 
         <label for="from"> End date </label>
-        <input type="text" name="leaveToDate" id="to"  readonly value = "<%= data.todate.toISOString().slice(0,10); %>">
+        <input type="text" name="leaveToDate" id="to"  readonly value = "<%= data.todate%>">
 
         <br>
 
